# Compliance-Screening-RAG-Tool

./: .gitignore  ALL_PHASES_COMPLETE.md  ENHANCED_COMPLIANCE.md  FRONTEND_TESTING.md  FULL_STACK_RUNNING.md  HOW_TO_VALIDATE.md  LANGGRAPH_VALIDATION.md  LOGGING_QUICK_REFERENCE.md  PHASE3_STRUCTURED_LOGGING.md  PHASE4_DEFENSIVE_SECURITY.md  PHASE8_EVALUATION_QUALITY.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  REFACTOR_NOTES.md  REFACTOR_SUMMARY.md  SETUP_GUIDE.md  SYSTEM_READY.md  TESTING_GUIDE.md  analyze_logs.py  cache.py  evaluate_ragas.py  http_server.py  langgraph_agent.py  logging_config.py  main.py  mcp_tools.py  pyproject.toml  quick_test.py  security.py  server.py  start_demo.sh  test_all_phases.py  test_langgraph.py  test_logging_standalone.py  test_phase4_security.py  test_phase5_cache.py  test_phase6_langgraph.py  test_phase7_async.py  test_silent_failures.py  (+1 more)
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/mcp/check-suitability/: route.ts
frontend/app/api/mcp/market-data/: route.ts
scripts/: generate_golden_snapshots.py  run_regression_tests.sh
tests/: golden_set.json  golden_set_snapshots.json
